add a drop down menu form about marathon running

--- a/index.html
+++ b/index.html
@@ -79,6 +79,36 @@
           Stranger Things
         </label>
       </div>
+      <p class="question-title">Have you ever run a marathon?</p>
+       <select id="marathon">
+          <option value="1">Yes</option>
+          <option value="2">No</option>
+       </select>
+       <p class="question-title">Favorite show</p>
+       <div class="radio"><!--television-->
+         <label>
+           <input type="radio" name="show" value="office">
+           The Office
+         </label>
+       </div>
+       <div class="radio">
+         <label>
+           <input type="radio" name="show" value="breaking-bad">
+           Breaking Bad
+         </label>
+       </div>
+       <div class="radio">
+         <label>
+           <input type="radio" name="show" value="bob-ross">
+           Bob Ross's painting show
+         </label>
+       </div>
+       <div class="radio">
+         <label>
+           <input type="radio" name="show" value="stranger-things">
+           Stranger Things
+         </label>
+       </div>
 
     <button type="submit" class="btn btn-primary">Submit</button>
 
