add forms for travel and free time with corresponding $

--- a/index.html
+++ b/index.html
@@ -80,33 +80,65 @@
         </label>
       </div>
       <p class="question-title">Have you ever run a marathon?</p>
-       <select id="marathon">
+       <select id="marathon"><!--marathon-->
           <option value="1">Yes</option>
           <option value="2">No</option>
        </select>
-       <p class="question-title">Favorite show</p>
-       <div class="radio"><!--television-->
+       <p class="question-title">Choose a travel buddy</p>
+        <select id="buddy"><!--buddy-->
+          <option value="1">Jack Black</option>
+          <option value="2">Benedict Cumberbatch</option>
+          <option value="3">Jennifer Lawrence</option>
+          <option value="4">Morgan Freeman</option>
+        </select>
+       <p class="question-title">What motivates you?</p>
+       <div class="radio"><!--motivation-->
          <label>
-           <input type="radio" name="show" value="office">
-           The Office
+           <input type="radio" name="motivation" value="peace">
+           Inner peace
          </label>
        </div>
        <div class="radio">
          <label>
-           <input type="radio" name="show" value="breaking-bad">
-           Breaking Bad
+           <input type="radio" name="motivation" value="money">
+           Money
          </label>
        </div>
        <div class="radio">
          <label>
-           <input type="radio" name="show" value="bob-ross">
-           Bob Ross's painting show
+           <input type="radio" name="motivation" value="power">
+           Power
          </label>
        </div>
        <div class="radio">
          <label>
-           <input type="radio" name="show" value="stranger-things">
-           Stranger Things
+           <input type="radio" name="motivation" value="helping">
+           Helping others
+         </label>
+       </div>
+       <p class="question-title">How would you spend a free day?</p>
+       <div class="radio"><!--free.time-->
+         <label>
+           <input type="radio" name="free" value="sleep">
+           Sleeping
+         </label>
+       </div>
+       <div class="radio">
+         <label>
+           <input type="radio" name="free" value="closet">
+           Organizing your closet
+         </label>
+       </div>
+       <div class="radio">
+         <label>
+           <input type="radio" name="free" value="friends">
+           Hanging out with friends
+         </label>
+       </div>
+       <div class="radio">
+         <label>
+           <input type="radio" name="free" value="read">
+           Reading
          </label>
        </div>
 
@@ -118,6 +150,7 @@
     <h1 id="python">Python</h1>
     <h1 id="js">JavaScript</h1>
     <h1 id="go">Go</h1>
+    <h1 id="r">R</h1>
 
     </div><!--container-->
   </body>
