add styling to the page heading

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="container">
       <div class="jumbotron" id="banner">
         <h1>Programming Language Suggester</h1>
-        <h3>Which programming language should you learn first? Take this quiz to find out.</h3>
+        <h3>Which programming language should you learn first? <br> Take this <strong>very legitimate</strong> and <strong>research-backed</strong> quiz to find out.</h3>
+        <p>All rights reserved.</p>
       </div>
 
     <form id="blanks">
