create one if statement to test functionality

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
 
       <p class="question-title">Favorite show</p>
-      <div class="radio"><!--television-->
+      <div class="radio"><!--show-->
         <label>
           <input type="radio" name="show" value="office">
           The Office
