add styling to the body of the page

--- a/index.html
+++ b/index.html
@@ -17,74 +17,83 @@
       </div>
 
     <form id="blanks">
-      <p class="question-title">Ideal meal</p>
-      <div class="radio"><!--meal-->
-        <label>
-          <input type="radio" name="meal" value="burger">
-          Burger
-        </label>
-      </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="meal" value="pad-thai">
-          Pad Thai
-        </label>
-      </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="meal" value="lobster-roll">
-          Lobser roll
-        </label>
-      </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="meal" value="sushi">
-          Sushi
-        </label>
-      </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="meal" value="burrito">
-          Burrito
-        </label>
-      </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="meal" value="chips">
-          A full bag of chips
-        </label>
+      <div class="well">
+        <p class="question-title">Ideal meal</p>
+        <div class="radio"><!--meal-->
+          <label>
+            <input type="radio" name="meal" value="burger">
+            Burger
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="meal" value="pad-thai">
+            Pad Thai
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="meal" value="lobster-roll">
+            Lobster roll
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="meal" value="sushi">
+            Sushi
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="meal" value="burrito">
+            Burrito
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="meal" value="chips">
+            A full bag of chips
+          </label>
+        </div>
       </div>
 
-      <p class="question-title">Favorite show</p>
-      <div class="radio"><!--show-->
-        <label>
-          <input type="radio" name="show" value="office">
-          The Office
-        </label>
+      <div class="well">
+        <p class="question-title">Favorite show</p>
+        <div class="radio"><!--show-->
+          <label>
+            <input type="radio" name="show" value="office">
+            The Office
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="show" value="breaking-bad">
+            Breaking Bad
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="show" value="bob-ross">
+            Bob Ross's painting show
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="show" value="stranger-things">
+            Stranger Things
+          </label>
+        </div>
       </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="show" value="breaking-bad">
-          Breaking Bad
-        </label>
+
+      <div class="well">
+        <p class="question-title">Have you ever run a marathon?</p>
+         <select id="marathon"><!--marathon-->
+            <option value="1">Yes</option>
+            <option value="2">No</option>
+         </select>
       </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="show" value="bob-ross">
-          Bob Ross's painting show
-        </label>
-      </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="show" value="stranger-things">
-          Stranger Things
-        </label>
-      </div>
-      <p class="question-title">Have you ever run a marathon?</p>
-       <select id="marathon"><!--marathon-->
-          <option value="1">Yes</option>
-          <option value="2">No</option>
-       </select>
+
+      <div class="well">
        <p class="question-title">Choose a travel buddy</p>
         <select id="buddy"><!--buddy-->
           <option value="1">Jack Black</option>
@@ -92,6 +101,9 @@
           <option value="3">Jennifer Lawrence</option>
           <option value="4">Morgan Freeman</option>
         </select>
+      </div>
+
+      <div class="well">
        <p class="question-title">What motivates you?</p>
        <div class="radio"><!--motivation-->
          <label>
@@ -117,6 +129,9 @@
            Helping others
          </label>
        </div>
+      </div>
+
+      <div class="well">
        <p class="question-title">How would you spend a free day?</p>
        <div class="radio"><!--free.time-->
          <label>
@@ -142,16 +157,17 @@
            Reading
          </label>
        </div>
+      </div>
 
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submsit" class="btn btn-primary">Submit</button>
 
     </form><!--blanks.form-->
 
-    <h1 id="ruby">Ruby</h1>
-    <h1 id="python">Python</h1>
-    <h1 id="js">JavaScript</h1>
-    <h1 id="go">Go</h1>
-    <h1 id="r">R</h1>
+    <h1 id="ruby">You should learn Ruby first.</h1>
+    <h1 id="python">You should learn Python first.</h1>
+    <h1 id="js">You should learn JavaScript first.</h1>
+    <h1 id="go">You should learn Go first.</h1>
+    <h1 id="r">You should learn R first</h1>
 
     </div><!--container-->
   </body>
