add hide functionality to make new responses replace old ones.

--- a/index.html
+++ b/index.html
@@ -167,14 +167,30 @@
 
     </form><!--blanks.form-->
 
-      <div class="hidden" id="ruby">
+      <div id="ruby">
         <h1>According to our very fancy algorithm...</h1>
+        <h2>it looks like you should learn Ruby first!</h2>
       </div>
 
-      <h1 id="python">According to our very fancy algorithm, it looks like you should learn Python first.</h1>
-      <h1 id="js">According to our very fancy algorithm, it looks like you should learn JavaScript first.</h1>
-      <h1 id="go">According to our very fancy algorithm, it looks like you should learn Go first.</h1>
-      <h1 id="r">According to our very fancy algorithm, it looks like you should learn R first</h1>
+      <div id="python">
+        <h1>According to our very fancy algorithm...</h1>
+        <h2>it looks like you should learn Python first!</h2>
+      </div>
+
+      <div id="js">
+        <h1>According to our very fancy algorithm...</h1>
+        <h2>it looks like you should learn JavaScript first!</h2>
+      </div>
+
+      <div id="go">
+        <h1>According to our very fancy algorithm...</h1>
+        <h2>it looks like you should learn Go first!</h2>
+      </div>
+
+      <div id="r">
+        <h1>According to our very fancy algorithm...</h1>
+        <h2>it looks like you should learn R first!</h2>
+      </div>
 
     </div><!--container-->
   </body>
