add name input field to address the user directly

--- a/index.html
+++ b/index.html
@@ -168,27 +168,27 @@
     </form><!--blanks.form-->
 
       <div id="ruby">
-        <h1>According to our very fancy algorithm...</h1>
+        <h1><span class="name"></span>, according to our very fancy algorithm...</h1>
         <h2>it looks like you should learn Ruby first!</h2>
       </div>
 
       <div id="python">
-        <h1>According to our very fancy algorithm...</h1>
+        <h1><span class="name"></span>, according to our very fancy algorithm...</h1>
         <h2>it looks like you should learn Python first!</h2>
       </div>
 
       <div id="js">
-        <h1>According to our very fancy algorithm...</h1>
+        <h1><span class="name"></span>, according to our very fancy algorithm...</h1>
         <h2>it looks like you should learn JavaScript first!</h2>
       </div>
 
       <div id="go">
-        <h1>According to our very fancy algorithm...</h1>
+        <h1><span class="name"></span>, according to our very fancy algorithm...</h1>
         <h2>it looks like you should learn Go first!</h2>
       </div>
 
       <div id="r">
-        <h1>According to our very fancy algorithm...</h1>
+        <h1><span class="name"></span>, according to our very fancy algorithm...</h1>
         <h2>it looks like you should learn R first!</h2>
       </div>
 
