add photo to top and some custom css to style

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1>Programming Language Suggester</h1>
         <h3>Which programming language should you learn first? <br> Take this <strong>very legitimate</strong> and <strong>research-backed</strong> quiz to find out.</h3>
         <p>All rights reserved.</p>
+        <img src="img/programming.jpg">
       </div>
 
     <form id="blanks">
@@ -167,29 +168,29 @@
 
     </form><!--blanks.form-->
 
-      <div id="ruby">
-        <h1><span class="name"></span>, according to our very fancy algorithm...</h1>
-        <h2>it looks like you should learn Ruby first!</h2>
+      <div id="ruby" class="jumbotron">
+        <h2>Hey <span class="name"></span>, according to our very fancy algorithm...</h2>
+        <h3>you should learn Ruby first!</h3>
       </div>
 
-      <div id="python">
-        <h1><span class="name"></span>, according to our very fancy algorithm...</h1>
-        <h2>it looks like you should learn Python first!</h2>
+      <div id="python" class="jumbotron">
+        <h2>Hey <span class="name"></span>, according to our very fancy algorithm...</h2>
+        <h3>you should learn Python first!</h3>
       </div>
 
-      <div id="js">
-        <h1><span class="name"></span>, according to our very fancy algorithm...</h1>
-        <h2>it looks like you should learn JavaScript first!</h2>
+      <div id="js" class="jumbotron">
+        <h2>Hey <span class="name"></span>, according to our very fancy algorithm...</h2>
+        <h3>you should learn JavaScript first!</h3>
       </div>
 
-      <div id="go">
-        <h1><span class="name"></span>, according to our very fancy algorithm...</h1>
-        <h2>it looks like you should learn Go first!</h2>
+      <div id="go" class="jumbotron">
+        <h2>Hey <span class="name"></span>, according to our very fancy algorithm...</h2>
+        <h3>you should learn Go first!</h3>
       </div>
 
-      <div id="r">
-        <h1><span class="name"></span>, according to our very fancy algorithm...</h1>
-        <h2>it looks like you should learn R first!</h2>
+      <div id="r" class="jumbotron">
+        <h2>Hey <span class="name"></span>, according to our very fancy algorithm...</h2>
+        <h3>you should learn R first!</h3>
       </div>
 
     </div><!--container-->
