--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
        </div>
       </div>
 
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn">Submit</button>
 
     </form><!--blanks.form-->
 
